--- a/styles.css
+++ b/styles.css
@@ -38,9 +38,6 @@ p{
 	border: none;
 }
 
-.body{
-	background-color: #F1F6F9;
-}
 header{
 	background: rgb(121, 147, 188);
 	border-bottom: 3px solid #1C3879;
@@ -114,78 +111,95 @@ li:last-child{
 	background-color: #1C3879;
   }
 
-/*         anasayfa         */
-.anasayfa{
-	padding: 50px;
-	padding-top: 50px;
-}
-.center-box {
-	width: 1100px;
-	height: 500px;
-	background-color: #1C3879;
-	position: relative;
-	margin: 100px 150px;
-	border-radius: 30px;
-	display: flex;
-	justify-content: center;
+  /*     ANASAYFA      */
+  .body{
+	background-color: #F1F6F9;
 }
 
-.pdf-file-icon img{
-	height: 10%;
-	width: 10%;
+.about{
+	margin: 20px 30px;
+	padding: 30px;
+	font-size: 12px;
+	justify-content: space-between;
+	padding: 10px 10px;
+}
+.buyukKutu{
+	display: flex;
+    justify-content: space-around;
+	align-items: center;
+	flex-direction: row;
+}
+.boxOne{
+	flex: 1;
+    height: 450px;
+    background-color: #1C3879;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+	margin-top: 200px;
+	margin-left: 200px;
+	margin-bottom: 50px;
+	position: relative;	
+}
+
+.boxOne .about{
 	position: relative;
-	object-fit: cover;
+	z-index: 1;
 }
-  
-.inner-box {
-	width: 250px;
-	height: 100px;
-	background-color: #F9F5EB;
-	color: #F9F5EB;
+.boxOne label{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+}
+.boxOne label span{
+	margin-bottom: 10px;
+}
+.boxOne input[type="file"]{
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	padding: 25px 80px;
-	transition: box-shadow 0.3s ease;
-	font-size: 15px;
-	text-align: center;
-	border-radius: 25px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-  }
-  
-.inner-box-moved {
+	top: 0;
+	left: 0;
+	opacity: 0;
 	width: 100%;
-	text-align: center;
-	margin: 0 auto;
-	font-size: 50px;
-	padding: 50px;
-	color: #F9F5EB
+	height: 100%;
+	cursor: pointer;
 }
-  
-  
-.inner-box:hover {
-	  color: rgb(121, 147, 188); 
-	  box-shadow: rgba(0, 6, 0, 0.5); 
+.boxTwo{
+	flex: 1;
+    height: 450px;
+    background-color: #000000;
+    display: flex;
+	gap: 10px;
+    justify-content: center;
+    align-items: center;
+	margin-top: 200px;
+	margin-right: 200px;
+	margin-bottom: 50px;
+	position: relative;
+    text-align: center;
 }
-  
-.inner-box span{
-	color: #1C3879;
-	text-align: center;
-	width: 100%;
-	margin: 0 auto;
-	padding: 0 0;
-	font-size: 20px;
-	font-weight: 600;
-	letter-spacing: 0.1rem;
-	display: inline-block;
-	margin: 0 5px;
-	display: flex;
+#fileSelectBtn,
+#loginBtn,
+#registerBtn {
+    width: 100px;
+    height: 40px;
+    background-color: #b5bdc5;
+    color: white;
+    border: none;
+    cursor: pointer;
+	border-radius: 5px;
+	padding: 10px 10px;
 	align-items: center;
-	justify-content: center;
 }
+
+#loginBtn:hover,
+#registerBtn:hover {
+    background-color: #0056b3;
+}
+#fileSelectBtn:hover{
+	background-color: #000000;
+}
+
   /*     ABOUT      */
 
   .about{
